--- a/templates/my text.html
+++ b/templates/my text.html
@@ -1,1 +1,29 @@
 
+<html>
+<head>
+<title>HwS - Info</title> 
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="hero">
+
+
+<img src="centerlogo.png" class="hwslogo" />
+
+<button class="OfficialSite"> HwS Files </button>
+
+
+<div class="bubbles">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+<img src="https://github.com/vkmsboy/Video-Player/blob/master/templates/bubble.png?raw=true">
+</div>
+
+</div>
+</div>
+</body>
+</html>
